--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -260,6 +260,14 @@ ul
 		img
 			height auto
 			width 100%
+	.imageLogo
+		img
+			height auto
+			width 100%
+	.cover
+		img
+			height auto
+			width 100%
 	.playing
 		&.medium
 			width auto
